syntax = "proto3";
package com.arsiwooqq.userservice.generated;

service UserService {
  rpc CreateUser(UserCreateRequest) returns (UserResponse);
}

message UserCreateRequest {
  string user_id = 1;
  string name = 2;
  string surname = 3;
  string birth_date = 4;
  string email = 5;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string surname = 3;
  string birth_date = 4;
  string email = 5;
}